[package]
name = "hwrm-scaffold"
version = "0.1.5"
edition = "2021"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.11", features = ["derive"] }
diesel = { version = "2.0.0", features = ["sqlite"] }
dotenvy = "0.15"
regex = "1.7.1"
